unpackaged/main/default/objects/Credit_Usage__c/Credit_Usage__c.object-meta.xml
<CustomObject>
    <label>Credit Usage</label>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>Credit Usage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Usages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>