unpackaged/main/default/objects/Credit_Usage__c/fields/Credit__c.field-meta.xml
<CustomField>
    <fullName>Credit__c</fullName>
    <label>Credit</label>
    <referenceTo>Credit__c</referenceTo>
    <relationshipLabel>Credit Usages</relationshipLabel>
    <relationshipName>Credit_Usages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>