unpackaged/main/default/objects/Credit_Usage__c/fields/Hours_Used__c.field-meta.xml
<CustomField>
    <fullName>Hours_Used__c</fullName>
    <label>Hours Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>