unpackaged/main/default/objects/Credit_Usage__c/fields/Monthly_Billing__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Billing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Monthly Billing</label>
    <referenceTo>Monthly_Billing__c</referenceTo>
    <relationshipLabel>Credit Usages</relationshipLabel>
    <relationshipName>Credit_Usages</relationshipName>
    <type>Lookup</type>
</CustomField>